@@ -11,6 +11,8 @@ Revision 4.3.10, released 2017-08-XX
   it propagates to the return value. Before this fix
   ObjectIdentity.prettyPrint() may crash when rendering malformed SNMP
   table indices.
+- Fixed multiple bugs in SNMP table indices rendering, especially
+  the InetAddressIPv6 type which was severely broken.
 
 Revision 4.3.9, released 2017-07-26
 -----------------------------------
